Add nation, northwestern, menafn, borgen and the peninsula to Featured In

--- a/index.html
+++ b/index.html
@@ -146,8 +146,18 @@
                                 </a>
                             </li>
                             <li class="glide__slide">
+                                <a href="https://pk.mashable.com/coronavirus/3002/here-is-how-you-can-save-a-life-in-forty-seconds" target="_blank">
+                                    <img src="images/media/mashable-pakistan.jpg" style="width: 160px; height: auto"/>
+                                </a>
+                            </li>
+                            <li class="glide__slide">
                                 <a href="https://youtu.be/gUEJHyE5c-s?t=4458" target="_blank">
                                     <img src="images/media/ARY News.png"/>
+                                </a>
+                            </li>
+                            <li class="glide__slide">
+                                <a href="https://www.thepeninsulaqatar.com/article/09/07/2020/NU-Q-student-responds-to-COVID-19-pandemic-in-Pakistan" target="_blank">
+                                    <img src="images/media/the-peninsula.png" style="width: 220px; height: auto"/>
                                 </a>
                             </li>
                             <li class="glide__slide">
@@ -156,9 +166,17 @@
                                 </a>
                             </li>
                             <li class="glide__slide">
-                                <a href="https://pk.mashable.com/coronavirus/3002/here-is-how-you-can-save-a-life-in-forty-seconds" target="_blank">
-                                    <img src="images/media/mashable-pakistan.jpg" style="width: 160px; height: auto"/>
+                                <a href="https://nation.com.pk/05-Jul-2020/pakistan-s-struggle-to-promote-face-masks-in-new-normal" target="_blank">
+                                    <img src="images/media/the-nation-pakistan.png"/>
                                 </a>
+                            </li>
+                            <li class="glide__slide">
+                                <a href="https://www.qatar.northwestern.edu/news/articles/2020/07-nuq-responds-to-covid19.html" target="_blank">
+                                    <img src="images/media/northwestern-university-qatar.png"/>
+                                </a>
+                            </li>
+                            <li class="glide__slide">
+                                <img src="images/media/library-of-congress.png" style="width: 220px; height: auto;"/>
                             </li>
                             <li class="glide__slide">
                                 <a href="http://runwaypakistan.com/mask-banao-jaan-bachao-covid-19/" target="_blank">
@@ -166,11 +184,18 @@
                                 </a>
                             </li>
                             <li class="glide__slide">
-                                <img src="images/media/library-of-congress.png" style="width: 220px; height: auto;"/>
+                                <a href="https://menafn.com/1100458423/Qatar-NU-Q-student-responds-to-COVID-19-pandemic-in-Pakistan" target="_blank">
+                                    <img src="images/media/menafn.jpg" style="width: 150px; height: auto"/>
+                                </a>
                             </li>
                             <li class="glide__slide">
                                 <a href="https://library.columbia.edu/collections/web-archives/Ivy_Plus_Libraries.html" target="_blank">
                                     <img src="images/media/IVY-Plus.jpg" style="width: 150px; height: auto"/>
+                                </a>
+                            </li>
+                            <li class="glide__slide">
+                                <a href="https://www.borgenmagazine.com/using-tiktok-in-pakistan-to-prevent-covid-19/" target="_blank">
+                                    <img src="images/media/borgen-magazine.jpg" style="width: 220px; height: auto;"/>
                                 </a>
                             </li>
                         </ul>
