Changed twitter posts on Social and home page

--- a/social.html
+++ b/social.html
@@ -68,15 +68,19 @@
 
             <div class="tweets">
                 <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">&quot;We pushed our government to make masks mandatory and in just 3 days everyone outside was wearing a face mask.&quot;<br><br>As the Czech government unveils plans to ease <a href="https://twitter.com/hashtag/Covid19?src=hash&amp;ref_src=twsrc%5Etfw">#Covid19</a> restrictions, here&#39;s a look at how the <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> campaign led by Czech citizens made a huge impact <a href="https://t.co/z1iL7kc3iM">pic.twitter.com/z1iL7kc3iM</a></p>&mdash; QuickTake by Bloomberg (@QuickTake) <a href="https://twitter.com/QuickTake/status/1250483769800298497?ref_src=twsrc%5Etfw">April 15, 2020</a></blockquote>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Mask Mera, Zindagi Aapki! Are you protecting your brothers, sisters, and neighbors by wearing a mask? All it takes is a piece of cloth, rubber bands, and 40 seconds.<br>.<a href="https://twitter.com/hashtag/MeraMask?src=hash&amp;ref_src=twsrc%5Etfw">#MeraMask</a> <a href="https://t.co/cRjRZPVc5t">pic.twitter.com/cRjRZPVc5t</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1254674880857083904?ref_src=twsrc%5Etfw">April 27, 2020</a></blockquote>
                 </div>
 
                 <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">History repeats itself<br>See the sign &quot;Wear a mask or go to jail,&quot; during the influenza epidemic in the USA,1918<br> <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/alSX9QxiLf">pic.twitter.com/alSX9QxiLf</a></p>&mdash; Martin A. Nuñez (@Martin_A_Nunez) <a href="https://twitter.com/Martin_A_Nunez/status/1250117668667088899?ref_src=twsrc%5Etfw">April 14, 2020</a></blockquote>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Miss that old T-Shirt you grew out of?<br>.<br>Follow these simple steps as shown below to convert your beloved T-Shirt into an effective cloth mask, only in two minutes!<br>.<br>Try this out and let us know by tagging <a href="https://twitter.com/MaskBanao?ref_src=twsrc%5Etfw">@maskbanao</a>, or simply use the hashtags <a href="https://twitter.com/hashtag/maskbanao?src=hash&amp;ref_src=twsrc%5Etfw">#maskbanao</a> and <a href="https://twitter.com/hashtag/meramask?src=hash&amp;ref_src=twsrc%5Etfw">#meramask</a>! <a href="https://t.co/jSoZjAATzX">pic.twitter.com/jSoZjAATzX</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1274700820555202563?ref_src=twsrc%5Etfw">June 21, 2020</a></blockquote>
                 </div>
 
                 <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Look at this! <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/b8Ily3rFfO">pic.twitter.com/b8Ily3rFfO</a></p>&mdash; Sudha Ramen IFS 🇮🇳 (@SudhaRamenIFS) <a href="https://twitter.com/SudhaRamenIFS/status/1251755076290371585?ref_src=twsrc%5Etfw">April 19, 2020</a></blockquote>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">What does a person who does not wear a mask have in common with students who scrambled to find the meaning of FARHANITRATE? Well, they are both being dumb. CDC and WHO have explained the importance of masks, so don’t be an idiot. Do what is obviously right. Make a Mask.<a href="https://twitter.com/hashtag/MeraMask?src=hash&amp;ref_src=twsrc%5Etfw">#MeraMask</a> <a href="https://t.co/D9vbtArOmZ">pic.twitter.com/D9vbtArOmZ</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1257376806967152642?ref_src=twsrc%5Etfw">May 4, 2020</a></blockquote>
+                </div>
+
+                <div class="tweet">
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Mask Banao is on the field, and in full gear!<br>.<br>On the 16th of June, we distributed 1100 masks at Lines Area, Karachi, with help from our friends at MVMNT. We are doing our part, and we request you to do yours.<br>.<br>Donate for our campaign now by visiting <a href="https://t.co/12Wm7oJ5zd">https://t.co/12Wm7oJ5zd</a>! <a href="https://t.co/E1G540RDDu">pic.twitter.com/E1G540RDDu</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1273221931324641280?ref_src=twsrc%5Etfw">June 17, 2020</a></blockquote>
                 </div>
 
                 <div class="tweet">
@@ -84,19 +88,11 @@
                 </div>
 
                 <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">My weekend productivity for the neighbours ! <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/tjYsZDb9r5">pic.twitter.com/tjYsZDb9r5</a></p>&mdash; 🇬🇧🇦🇺🇪🇺 Alison🦉🌏 🔶 (@pixielation) <a href="https://twitter.com/pixielation/status/1251897746937851904?ref_src=twsrc%5Etfw">April 19, 2020</a></blockquote>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The number of confirmed Coronavirus cases has risen to 223728 a rise of 3199 in merely the past 24 hours. There were also 77 new deaths from the virus today bringing the total tally to 4592. Experts suggest there might be as many as 105513 active COVID-19 infections in Pakistan. <a href="https://t.co/UCZeOmYcJ2">pic.twitter.com/UCZeOmYcJ2</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1279107330664251392?ref_src=twsrc%5Etfw">July 3, 2020</a></blockquote>
                 </div>
 
                 <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">It wasn’t the wedding we planned on, but we learned that we look pretty good in masks ❤️ I guess if you can survive a wedding in a pandemic you can survive anything? <a href="https://twitter.com/hashtag/LoveTrumpsCovid?src=hash&amp;ref_src=twsrc%5Etfw">#LoveTrumpsCovid</a> <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/TPrqmBur2A">pic.twitter.com/TPrqmBur2A</a></p>&mdash; Joe Futoma (@JFutoma) <a href="https://twitter.com/JFutoma/status/1251655610430611456?ref_src=twsrc%5Etfw">April 18, 2020</a></blockquote>
-                </div>
-
-                <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Germany?src=hash&amp;ref_src=twsrc%5Etfw">#Germany</a>&#39;s government does u-turn on masks: after saying they are useless and maybe even dangerous, now official the recommendation is everyone should (voluntarily)wear them in public. <a href="https://twitter.com/hashtag/Merkel?src=hash&amp;ref_src=twsrc%5Etfw">#Merkel</a> says masks must be disinfected by washing, ironing or microwaving <a href="https://twitter.com/hashtag/maskeauf?src=hash&amp;ref_src=twsrc%5Etfw">#maskeauf</a> <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/DlcyiQak45">pic.twitter.com/DlcyiQak45</a></p>&mdash; Bojan Pancevski (@bopanc) <a href="https://twitter.com/bopanc/status/1250466002464366593?ref_src=twsrc%5Etfw">April 15, 2020</a></blockquote>
-                </div>
-
-                <div class="tweet">
-                    <blockquote class="twitter-tweet" data-conversation="none"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://twitter.com/narendramodi?ref_src=twsrc%5Etfw">@narendramodi</a> our humble and sincere effort to contribute to the needful by making 100%cotton 2 ply reusable washable regular mask for all at home during lockdown . <a href="https://t.co/m00Gp6RJ6O">pic.twitter.com/m00Gp6RJ6O</a></p>&mdash; Deepak Agrawal (@dka_nmsindia) <a href="https://twitter.com/dka_nmsindia/status/1251509866125910016?ref_src=twsrc%5Etfw">April 18, 2020</a></blockquote>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Pakistan&#39;s COVID-19 case curve is finally flattening because of the precautions everyone has been taking. However, it is important that we don&#39;t stop now.<br>.<br>Continue being cautious so we can keep flattening the curve!<br>.<a href="https://t.co/12Wm7oJ5zd">https://t.co/12Wm7oJ5zd</a> <a href="https://t.co/LPqEjLh9W0">pic.twitter.com/LPqEjLh9W0</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1291038218226458624?ref_src=twsrc%5Etfw">August 5, 2020</a></blockquote>
                 </div>
 
                 <div class="tweet">
@@ -104,15 +100,7 @@
                 </div>
 
                 <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Doesn&#39;t have to be complicated. No mask is 100% effective or nurses and doctors wouldn&#39;t be getting sick, but they are way more effective than nothing. Look at South Korea, 205 deaths, Taiwan 6. They are right by China. They&#39;ve been wearing masks the whole time. <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/SiI5cLGtuq">pic.twitter.com/SiI5cLGtuq</a></p>&mdash; #Masks4All cosmicprank (thomas) 🧢 (@cosmicprank) <a href="https://twitter.com/cosmicprank/status/1249288482746322950?ref_src=twsrc%5Etfw">April 12, 2020</a></blockquote>
-                </div>
-
-                <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The video that ended the masks don&#39;t work debate. <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/Vt5cWLfycc">pic.twitter.com/Vt5cWLfycc</a></p>&mdash; Cam Woodsum #masks4all #testtraceisolate (@CamWoodsum) <a href="https://twitter.com/CamWoodsum/status/1251272714960211970?ref_src=twsrc%5Etfw">April 17, 2020</a></blockquote>
-                </div>
-
-                <div class="tweet">
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Good morning, friends. There will be 11 more music note masks available at noon MST (link in bio). They sold out immediately last time. For every mask purchased we will donate one to the Navajo &amp; Hopi Nations where the need is dire. Ahéhee’ ❤️ <a href="https://twitter.com/hashtag/Din%C3%A9tah?src=hash&amp;ref_src=twsrc%5Etfw">#Dinétah</a> <a href="https://twitter.com/hashtag/covid?src=hash&amp;ref_src=twsrc%5Etfw">#covid</a> <a href="https://twitter.com/hashtag/Masks4All?src=hash&amp;ref_src=twsrc%5Etfw">#Masks4All</a> <a href="https://t.co/gFyPfchyFv">pic.twitter.com/gFyPfchyFv</a></p>&mdash; Anna 🧢 (@HadahiiliYazhi) <a href="https://twitter.com/HadahiiliYazhi/status/1251132256564858882?ref_src=twsrc%5Etfw">April 17, 2020</a></blockquote>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The best part about using a homemade mask is that you don&#39;t have to continue buying new masks, you can just reuse the one you already have!<br>.<br>In these 6 simple steps, learn how a cloth mask can be washed and reused for another day! <br>.<a href="https://t.co/12Wm7oJ5zd">https://t.co/12Wm7oJ5zd</a> <a href="https://t.co/cL9bNRkwdf">pic.twitter.com/cL9bNRkwdf</a></p>&mdash; Mask Banao (@MaskBanao) <a href="https://twitter.com/MaskBanao/status/1279455164202713088?ref_src=twsrc%5Etfw">July 4, 2020</a></blockquote>
                 </div>
             </div>
         </div>
